schoolgroup added  infinite animation CSS

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -261,93 +261,6 @@
           </div>
         </section>
 
-      <!-- 한 번에 끝내는 AI 학습코스 섹션 -->
-      <section class="learning-course" id="experience">
-        <div class="learning-course__inner">
-          <h3 class="learning-course__title">
-            한 번에 끝내는 AI 학습코스
-          </h3>
-          <ul class="learning-course__list">
-            <!-- main_1 데이터분석 Basic -->
-            <li class="learning-course__item">
-              <div class="learning-course__content">
-                <div class="learning-course__text">
-                  <p class="learning-course__name">데이터분석 Basic</p>
-                  <span class="learning-course__desc">
-                    파이썬 언어와 기초적인 머신러닝 알고리즘을 학습하고 실습 할 수 있어요.
-                  </span>
-                  <button class="learning-course__btn"><a href="course_intro/open_onbook/1">체험하기</a></button>
-                </div>
-                <div class="learning-course__image">
-                  <img src="../aionbook_theme/images/home/main_1.png" alt="데이터분석 Basic">
-                </div>
-              </div>
-            </li>
-            <!-- main_2 데이터분석 Advanced -->
-            <li class="learning-course__item">
-              <div class="learning-course__content">
-                <div class="learning-course__text">
-                  <p class="learning-course__name">데이터분석 Advanced</p>
-                  <span class="learning-course__desc">
-                    기초 통계와 데이터분석에 사용되는 주요 알고리즘과 라이브러리를 학습하고 실습할 수 있어요.
-                  </span>
-                  <button class="learning-course__btn"><a href="javascript:alert('콘텐츠 준비중입니다.');"><font color="#aaa">체험하기</font></a>
-                  </button>
-                </div>
-                <div class="learning-course__image">
-                  <img src="../aionbook_theme/images/home/main_2.png" alt="데이터분석 Advanced">
-                </div>
-              </div>
-            </li>
-            <!-- main_3 머신러닝 -->
-            <li class="learning-course__item">
-              <div class="learning-course__content">
-                <div class="learning-course__text">
-                  <p class="learning-course__name">머신러닝</p>
-                  <span class="learning-course__desc">
-                    머신러닝에 필요한 선형대수,통계부터 다양한 모델의 실습을 통해 모델 훈련과 최적화를 경험할 수 있어요.</span>
-                  <button class="learning-course__btn"><a href="javascript:alert('콘텐츠 준비중입니다.');"><font color="#aaa">체험하기</font></a>
-                  </button>
-                </div>
-                <div class="learning-course__image">
-                  <img src="../aionbook_theme/images/home/main_3.png" alt="머신러닝">
-                </div>
-              </div>
-            </li>
-            <!-- main_4 딥러닝 -->
-            <li class="learning-course__item">
-              <div class="learning-course__content">
-                <div class="learning-course__text">
-                  <p class="learning-course__name">딥러닝</p>
-                  <span class="learning-course__desc">
-                  ChatGPT의 근간이 되는 딥러닝을 기본부터 배울 수 있는 코스예요.                </span>
-                  <button class="learning-course__btn"><a href="javascript:alert('콘텐츠 준비중입니다.');"><font color="#aaa">체험하기</font></a>
-                  </button>
-                </div>
-                <div class="learning-course__image">
-                  <img src="../aionbook_theme/images/home/main_4.png" alt="딥러닝">
-                </div>
-              </div>
-            </li>
-            <!-- main_5 DT 역량진단 -->
-            <li class="learning-course__item">
-              <div class="learning-course__content">
-                <div class="learning-course__text">
-                  <p class="learning-course__name">DT 역량진단</p>
-                  <span class="learning-course__desc">
-                  역량진단 간략 설명이 들어갑니다. 역량진단 간략 설명이 들어갑니다.                </span>
-                  <button class="learning-course__btn"><a href="javascript:alert('콘텐츠 준비중입니다.');"><font color="#aaa">체험하기</font></a>
-                  </button>
-                </div>
-                <div class="learning-course__image">
-                  <img src="../aionbook_theme/images/home/main_5.png" alt=DT역량진단">
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-
 
       <!-- <section class="banner">
         <div class="banner__inner">
@@ -367,30 +280,14 @@
           <h4 class="schoolgroup_title">AI 온북 그룹들</h4>
           <div class="schoolgroup_list">
             <div claa="schoolgroup_item">
-              <img src="../aionbook_theme/images/home/schoolgroup.png"/>
+              <img src="../aionbook_theme/images/home/Schoolgroup01.png"/>
+              <img src="../aionbook_theme/images/home/Schoolgroup02.png"/>
+              <img src="../aionbook_theme/images/home/Schoolgroup03.png"/>
             </div>
           </div>
         </div>
       </section>
       
-      <section class="partner-company">
-        <div class="partner-company__inner">
-          <h4 class="partner-company__title">함께하는 교육기관 및 기업</h4>
-          <div class="partner-company__list">
-            <p class="partner-company__item">TMD교육그룹</p>
-            <p class="partner-company__item">현대엔지비</p>
-            <p class="partner-company__item">경남대학교</p>
-            <p class="partner-company__item">성결대학교</p>
-            <p class="partner-company__item">아주대학교</p>
-            <p class="partner-company__item">창원대학교</p>
-            <p class="partner-company__item">한양대학교</p>
-            <p class="partner-company__item">능동고등학교</p>
-            <p class="partner-company__item">동두천고등학교</p>
-            <p class="partner-company__item">분당경영고등학교</p>
-            <p class="partner-company__item">양운고등학교</p>
-          </div>
-        </div>
-      </section>
 
       <section class="price" id="price">
         
@@ -413,20 +310,20 @@
           <div class="inquiry__form">
             <form>
               <div class="inquiry__input">
-                <label for="user-name">담당자 성함</label>
-                <input type="text" id="inquiry_name" name="inquiry_name" />
+                <label for="user-name">기업・기관명</label>
+                <input type="text" id="inquiry_name" name="inquiry_name" placeholder="더에이아이랩"/>
               </div>
               <div class="inquiry__input">
                 <label for="email">이메일</label>
-                <input type="text" id="inquiry_email" name="inquiry_email" />
+                <input type="text" id="inquiry_email" name="inquiry_email"  placeholder="theailab@naver.com"/>
               </div>
               <div class="inquiry__input">
                 <label for="phone">연락처</label>
-                <input type="number" id="inquiry_phone" name="inquiry_phone" />
+                <input type="number" id="inquiry_phone" name="inquiry_phone" placeholder="010-0000-0000"/>
               </div>
               <div class="inquiry__input">
                 <label for="people-number">교육 인원</label>
-                <input type="number" id="inquiry_number" name="inquiry_number" />
+                <input type="number" id="inquiry_number" name="inquiry_number" placeholder="26명" />
               </div>
               <div class="inquiry__input">
                 <label for="inquiry-content">문의 내용</label>
