fixed inquiry input form

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -322,8 +322,8 @@
             </div>
           </div>
           <div class="pricetable_text">
-            <p>*위 가격은 학교(중(점)고교,대학)기준가이며, 재직자의 경우 별도 협의 필요. 최종 가격은 인원수/수강기간 등에 따라 협의 가능</p>
-            <p>(문의: sanders.lee@theailab.co)</p>
+            <p>*위 가격은 학교(중(점)고교,대학)기준가이며, <strong>재직자의 경우 별도 협의 필요.</strong> 최종 가격은 <strong>인원수/수강기간 등에 따라 협의 가능</strong></p>
+            <p>(문의: <strong>sanders.lee@theailab.co</strong>)</p>
           </div>
         </div>
       </section>
@@ -335,8 +335,7 @@
             도입문의
           </span>
             <p class="inquiry__description">
-              지금 신청하고<br />
-              무료로 체험해보세요
+              지금 신청하고 무료로 체험해보세요
             </p>
             <span class="inquiry__sub-description">
             1개월 무제한 콘텐츠, 기능을 체험할 수 있어요.
