fixed main page  feedback

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -445,6 +445,7 @@ document.querySelector(".close-btn").addEventListener("click", function() {
 <!-- Mobile Footer -->
 <footer class="mobile-footer">
   <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="mobile-footer__logo">
+  <div class="mobile-footer__top">
   <div class="mobile-footer__section">
     <h3 class="mobile-footer__section-title">서비스</h3>
     <ul class="mobile-footer__nav-list">
@@ -466,6 +467,8 @@ document.querySelector(".close-btn").addEventListener("click", function() {
       <li class="mobile-footer__nav-item"><a href="#">AI온북</a></li>
     </ul>
   </div>
+</div>
+<div class="desktop-footer__bottom">
   <div class="mobile-footer__company-info">
     더에이아이랩 ㈜, 대표: 최영준<br>
     사업자등록번호: 439-87-00757<br>
@@ -473,6 +476,7 @@ document.querySelector(".close-btn").addEventListener("click", function() {
     주소: 서울특별시 강남구 선릉로 108길 9 5층<br>
     © The AI Lab. All rights reserved.
   </div>
+</div>
 </footer>
 
     </div>
