--- a/aionbook/mainsignup1.html
+++ b/aionbook/mainsignup1.html
@@ -6,9 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css">
     <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/components.css">
-    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/common.css">
+    <link rel="stylesheet" href="../aionbook_theme/css/pages.css">
+    <!-- 메인 수정중이어서, 잠시 page 경로 수정 -->
+    <!-- <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css"> -->
+    <!-- <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css"> -->
 
     <!-- 과정 카드 css추가 -->
     <link rel="stylesheet" href="../aionbook_theme/css/coursegrid.css">
@@ -171,100 +174,77 @@
             </section>
           </div> 
 
-        <footer>
-          <div class="desktop-footer">
-            <div class="desktop-footer__inner">
-              <div class="desktop-footer__top">
-                <p class="desktop-footer__logo">OnBook AI</p>
-                <ul class="footer-nav">
-                  <li class="footer-nav__item">
-                    <a href="https://coding-x.com" target="_blank">코딩엑스AI</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="https://kdc.codingx.ai" target="_blank">K-디지털 기초역량훈련</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="https://www.edupar.net" target="_blank">기업교육</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="desktop-footer__bottom">
-                <ul class="footer-nav footer-nav--bottom">
-                  <li class="footer-nav__item">
-                    <a href="javascript:popup_member_term('access');">이용약관</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="javascript:popup_member_term('personal');">개인정보처리방침</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="#">고객센터</a>
-                  </li>
-                </ul>
-                <p class="desktop-footer__company-name">
-                  더에이아이랩 주식회사
-                </p>
-                <div class="desktop-footer__info">
-                  <p>
-                    대표: 최영준 | 사업자 등록번호: 439-87-00757 | 통신판매신고번호: 제 2020-서울강남-02380<br />
-                    주소: 서울특별시 강남구 선릉로 108길 9 5층 | 이메일: contact@theailab.co | 전화: 02-2039-9355
-                  </p>
-                  <p>THE AI Lab. All rights reserved.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-  
-          <div class="mobile-footer">
-            <div class="mobile-footer__inner">
-              <div class="mobile-footer__top">
-                <p class="mobile-footer__logo">OnBook AI</p>
-                <ul class="footer-nav">
-                  <li class="footer-nav__item">
-                    <a href="#">코딩엑스AI</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="#">K-디지털 기초역량훈련</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="#">기업교육</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="mobile-footer__bottom">
-                <ul class="footer-nav footer-nav--bottom">
-                  <li class="footer-nav__item">
-                    <a href="javascript:popup_member_term('access');">이용약관</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="javascript:popup_member_term('personal');">개인정보처리방침</a>
-                  </li>
-                  <li class="footer-nav__item">
-                    <a href="#">고객센터</a>
-                  </li>
-                </ul>
-                <p class="mobile-footer__company-name">
-                  더에이아이랩 주식회사
-                </p>
-                <div class="mobile-footer__info">
-                  <p>
-                    대표: 최영준<br />
-                    사업자 등록번호: 439-87-00757<br />
-                    통신판매신고번호: 제 2020-서울강남-02380<br />
-                  </p>
-                  <p>
-                    주소: 서울특별시 강남구 선릉로 108길 9 5층<br />
-                    이메일: contact@theailab.co<br />
-                    전화: 02-2039-9355<br />
-                  </p>
-                  <p>THE AI Lab. All rights reserved.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-  
-        </footer>
-  
+<!-- Desktop Footer -->
+<footer class="desktop-footer">
+  <div class="desktop-footer__inner">
+    <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="desktop-footer__logo">
+    <div class="desktop-footer__top">
+      <div class="desktop-footer__section">
+        <h3 class="desktop-footer__section-title">서비스</h3>
+        <ul class="desktop-footer__nav-list">
+          <li class="desktop-footer__nav-item"><a href="#">초대 가이드</a></li>
+          <li class="desktop-footer__nav-item"><a href="#">요금 안내</a></li>
+        </ul>
       </div>
+      <div class="desktop-footer__section">
+        <h3 class="desktop-footer__section-title">비즈니스</h3>
+        <ul class="desktop-footer__nav-list">
+          <li class="desktop-footer__nav-item"><a href="#">회사소개</a></li>
+          <li class="desktop-footer__nav-item"><a href="#">그룹교육</a></li>
+        </ul>
+      </div>
+      <div class="desktop-footer__section">
+        <h3 class="desktop-footer__section-title">패밀리사이트</h3>
+        <ul class="desktop-footer__nav-list">
+          <li class="desktop-footer__nav-item"><a href="#">코딩엑스</a></li>
+          <li class="desktop-footer__nav-item"><a href="#">AI온북</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="desktop-footer__bottom">
+      <div class="desktop-footer__company-info">
+        더에이아이랩 ㈜, 대표: 최영준 | 이용약관 | 개인정보 처리방침<br>
+        사무실: 서울시 강남구 선릉로 108길 9, 5층 | 통신판매신고번호 제 2020-서울강남-02380 | 사업자등록번호 439-87-00757<br>
+        © The AI Lab. All rights reserved.
+      </div>
+    </div>
+  </div>
+</footer>
+  
+<!-- Mobile Footer -->
+<footer class="mobile-footer">
+  <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="mobile-footer__logo">
+  <div class="mobile-footer__section">
+    <h3 class="mobile-footer__section-title">서비스</h3>
+    <ul class="mobile-footer__nav-list">
+      <li class="mobile-footer__nav-item"><a href="#">초대 가이드</a></li>
+      <li class="mobile-footer__nav-item"><a href="#">요금 안내</a></li>
+    </ul>
+  </div>
+  <div class="mobile-footer__section">
+    <h3 class="mobile-footer__section-title">비즈니스</h3>
+    <ul class="mobile-footer__nav-list">
+      <li class="mobile-footer__nav-item"><a href="#">회사소개</a></li>
+      <li class="mobile-footer__nav-item"><a href="#">그룹교육</a></li>
+    </ul>
+  </div>
+  <div class="mobile-footer__section">
+    <h3 class="mobile-footer__section-title">패밀리사이트</h3>
+    <ul class="mobile-footer__nav-list">
+      <li class="mobile-footer__nav-item"><a href="#">코딩엑스</a></li>
+      <li class="mobile-footer__nav-item"><a href="#">AI온북</a></li>
+    </ul>
+  </div>
+  <div class="mobile-footer__company-info">
+    더에이아이랩 ㈜, 대표: 최영준<br>
+    사업자등록번호: 439-87-00757<br>
+    통신판매신고번호: 제 2020-서울강남-02380<br>
+    주소: 서울특별시 강남구 선릉로 108길 9 5층<br>
+    © The AI Lab. All rights reserved.
+  </div>
+</footer>
+
+    </div>
   
   
   <script src="/aionbook_theme/js/jquery.bpopup.mib.js"></script>
