add locked png upload

--- a/aionbook/indexbackup.html
+++ b/aionbook/indexbackup.html
@@ -882,6 +882,532 @@
       margin-top: 48px;
     }
   }
+    /* @media screen and (max-width: 767px) {
+    body {
+      min-height: 100vh;
+    }
+    body .details-wrap {
+      position: relative;
+      min-height: inherit;
+    }
+    body .details-wrap__container {
+      min-width: 100%;
+      padding: 0 16px;
+    }
+    body .details-wrap__header {
+      padding: 0 16px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 60px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+    }
+    body .details-drawer {
+      padding-right: 0;
+      left: 0;
+      right: 0;
+      -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+      transform: translateX(-100%);
+    }
+    body .details-drawer__inner {
+      width: 100%;
+      box-shadow: initial;
+    }
+    body .details-drawer__top {
+      padding: 24px;
+    }
+    body .details-drawer__step {
+      font-size: 14px;
+      line-height: 1.25rem;
+    }
+    body .details-drawer__title {
+      font-size: 18px;
+      line-height: 1.5rem;
+    }
+    body .details-drawer__buttons {
+      display: none;
+    }
+    body .details-drawer__close-btn {
+      top: 24px;
+      right: 10px;
+      width: 24px;
+      height: 24px;
+      background-color: transparent;
+      background-image: url("../images/icon/close.png");
+      background-size: 14px 14px;
+    }
+    body .details-drawer.open {
+      -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+      transform: translateX(0);
+    }
+    body .introduction {
+      padding: 140px 0 120px;
+      margin: 0;
+      width: 100%;
+    }
+    body .introduction__visual {
+      max-width: 500px;
+    }
+    body .introduction__title {
+      margin-top: 24px;
+      font-size: 24px;
+      line-height: 2.25rem;
+    }
+    body .introduction__subtitle {
+      font-size: 18px;
+      line-height: 1.75rem;
+    }
+    body .introduction__subtitle:not(:first-of-type) {
+      margin-top: 40px;
+    }
+    body .introduction__contents {
+      margin-top: 16px;
+      font-size: 16px;
+      line-height: 1.75rem;
+    }
+    body .introduction .chip {
+      margin-top: 12px;
+    }
+    body .introduction hr {
+      margin: 24px 0 40px;
+    }
+    body .point-box__label {
+      font-size: 18px;
+      line-height: 1.75rem;
+    }
+    body .guide-box__label {
+      font-size: 18px;
+      line-height: 1.75rem;
+    }
+    body .hint-box__label {
+      font-size: 18px;
+      line-height: 1.75rem;
+    }
+    body .navi-box {
+      margin-top: 40px;
+      height: 252px;
+    }
+    body .navi-box__buttons {
+      margin-top: 48px;
+    }
+  } */
+  /*# sourceMappingURL=../maps/pages.css.map */
+  .introduction {
+    margin: 0 auto;
+    padding: 80px 0 200px;
+    width: 744px;
+    text-align: center;
+    color: #1c1c1c;
+  }
+  .introduction__visual {
+    width: 100%;
+    height: auto;
+  }
+  .introduction__title {
+    margin-top: 56px;
+    font-size: 36px;
+    line-height: 3.375rem;
+    font-weight: 800;
+    color: #000;
+  }
+  .introduction__subtitle {
+    font-size: 24px;
+    line-height: 2.25rem;
+    font-weight: 700;
+    text-align: left;
+    color: #0a0a0a;
+  }
+  .introduction__subtitle:not(:first-of-type) {
+    margin-top: 48px;
+  }
+  .introduction__contents {
+    margin-top: 12px;
+    font-size: 18px;
+    line-height: 2rem;
+    font-weight: 500;
+    text-align: left;
+  }
+  .introduction .chip {
+    margin-top: 24px;
+  }
+  .introduction hr {
+    margin: 60px 0 40px;
+  }
+  
+  .point-box {
+    position: relative;
+    padding: 24px;
+    margin-top: 64px;
+    background-color: #f6f6f6;
+    text-align: left;
+    font-size: 18px;
+    line-height: 2rem;
+    font-weight: 500;
+  }
+  .point-box:before {
+    position: absolute;
+    top: -16px;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 16px;
+    background-color: #c2f0ff;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    content: "";
+  }
+  .point-box__label {
+    margin-bottom: 16px;
+    display: inline-block;
+    font-size: 20px;
+    line-height: normal;
+    color: #17a4d3;
+  }
+  .point-box__list {
+    padding-left: 24px;
+  }
+  .point-box__list li {
+    list-style: disc;
+  }
+  
+  .guide-box {
+    position: relative;
+    padding: 24px;
+    margin-top: 64px;
+    background-color: #f6f6f6;
+    text-align: left;
+    font-size: 18px;
+    line-height: 2rem;
+    font-weight: 500;
+  }
+  .guide-box:before {
+    position: absolute;
+    top: -16px;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 16px;
+    background-color: #80ffaa;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    content: "";
+  }
+  .guide-box__label {
+    margin-bottom: 16px;
+    display: inline-block;
+    font-size: 20px;
+    line-height: normal;
+    color: #009933;
+  }
+  
+  .hint-box {
+    position: relative;
+    padding: 24px;
+    margin-top: 64px;
+    background-color: #f6f6f6;
+    text-align: left;
+    font-size: 18px;
+    line-height: 2rem;
+    font-weight: 500;
+  }
+  .hint-box:before {
+    position: absolute;
+    top: -16px;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 16px;
+    background-color: #ffd699;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    content: "";
+  }
+  .hint-box__label {
+    margin-bottom: 16px;
+    display: inline-block;
+    font-size: 20px;
+    line-height: normal;
+    color: #ff9900;
+  }
+  
+  .navi-box {
+    margin-top: 160px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    width: 100%;
+    height: 292px;
+    background-color: #edf0fd;
+    border-radius: 12px;
+    text-align: center;
+  }
+  .navi-box__title {
+    font-size: 24px;
+    line-height: 2.25rem;
+    font-weight: 700;
+  }
+  .navi-box p {
+    margin-top: 16px;
+    font-size: 18px;
+    line-height: 2rem;
+    font-weight: 500;
+    color: #3f3f3f;
+  }
+  .navi-box__buttons {
+    margin-top: 40px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 16px;
+    -moz-column-gap: 16px;
+    column-gap: 16px;
+  }
+  .navi-box__buttons button {
+    padding: 0 5px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 104px;
+    height: 48px;
+    border-radius: 12px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .navi-box__buttons button.navi-box__prev-btn {
+    background-color: #fff;
+    border: 1px solid #858585;
+    color: #3f3f3f;
+  }
+  .navi-box__buttons button.navi-box__start-btn {
+    background-color: #7517d3;
+    color: #fff;
+  }
+  .chapter-accordion {
+    -webkit-box-flex: 1;
+    -webkit-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    overflow-y: auto;
+    background-color: #fff;
+  }
+  .chapter-accordion::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: transparent;
+  }
+  .chapter-accordion::-webkit-scrollbar {
+    display: block;
+    width: 5px;
+    height: 6px;
+  }
+  .chapter-accordion::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #ddd;
+    border-right: none;
+    border-left: none;
+  }
+  .chapter-accordion::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 10px;
+  }
+  .chapter-accordion::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 10px;
+  }
+  .chapter-accordion__parent {
+    padding: 14px 20px 14px 24px;
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 12px;
+    -moz-column-gap: 12px;
+    column-gap: 12px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-width: 0;
+  }
+  .chapter-accordion__parent span {
+    -webkit-box-flex: 2;
+    -webkit-flex: 2 1 100px;
+    -ms-flex: 2 1 100px;
+    flex: 2 1 100px;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: left;
+  }
+  .chapter-accordion__parent:after {
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url("../images/icon/arrow-up.png") no-repeat center;
+    background-size: 12px auto;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+    content: "";
+  }
+  .chapter-accordion__parent.active:after {
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  .chapter-accordion__children {
+    position: relative;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+    will-change: transform;
+  }
+  .chapter-accordion__children li {
+    position: relative;
+    padding: 0px 20px 0 24px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 48px;
+    cursor: pointer;
+  }
+  .chapter-accordion__children li a {
+    padding-left: 32px;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    align-self: center;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    background: url("../images/icon/list.png") no-repeat left center;
+    background-size: 14px 14px;
+  }
+  .chapter-accordion__children li:before {
+    content: "";
+    margin-right: 16px;
+    margin-left: -2px;
+    position: relative;
+    z-index: 3;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-radius: 100%;
+    background-color: #cacaca;
+    border: 2px solid #fff;
+  }
+  .chapter-accordion__children li::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 30px;
+    width: 1px;
+    background-color: #cacaca;
+    z-index: 2;
+  }
+  .chapter-accordion__children li:first-of-type:after {
+    top: 16px;
+  }
+  .chapter-accordion__children li:last-of-type:after {
+    bottom: 16px;
+  }
+  .chapter-accordion__children li.active a {
+    color: #1737d3;
+    background-image: url("../images/icon/list_active.png");
+  }
+  .chapter-accordion__children li.active:before {
+    background-color: #6077ed;
+  }
+  .chapter-accordion__children li.active:after {
+    background-color: #6077ed;
+  }
+  .chapter-accordion__children.show {
+    height: auto;
+    overflow: hidden;
+    -webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+  }
+  .home-btn {
+    -webkit-box-flex: 0;
+    -webkit-flex: none;
+    -ms-flex: none;
+    flex: none;
+    padding: 16px 24px;
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
+    box-shadow: 0px -2px 12px 0 rgba(0, 0, 0, 0.064);
+    background-color: #bcdbfa;
+  }
+  .home-btn:before {
+    content: "";
+    margin-right: 16px;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: url("../images/icon/home.png") no-repeat left center;
+    background-size: 16px auto;
+  }
 </style>
 
 <script>
