--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -434,7 +434,7 @@ document.querySelector(".close-btn").addEventListener("click", function() {
     </div>
     <div class="desktop-footer__bottom">
       <div class="desktop-footer__company-info">
-        더에이아이랩 ㈜, 대표: 최영준 | 이용약관 | 개인정보 처리방침<br>
+        더에이아이랩 ㈜, 대표: 최영준 | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a><br>
         사무실: 서울시 강남구 선릉로 108길 9, 5층 | 통신판매신고번호 제 2020-서울강남-02380 | 사업자등록번호 439-87-00757<br>
         © The AI Lab. All rights reserved.
       </div>
