Improved mobile-footer__inner

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -401,11 +401,10 @@ document.querySelector(".close-btn").addEventListener("click", function() {
     </div>
   </div>
 </section>
+</div>
 
-
-    </div>
-    <div>
 <!-- Desktop Footer -->
+<div>
 <footer class="desktop-footer">
   <div class="desktop-footer__inner">
     <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="desktop-footer__logo">
@@ -444,6 +443,7 @@ document.querySelector(".close-btn").addEventListener("click", function() {
 
 <!-- Mobile Footer -->
 <footer class="mobile-footer">
+  <div class="mobile-footer__inner">
   <img src="../aionbook_theme/images/home/onbooklogofooter.png" alt="The AI Lab" class="mobile-footer__logo">
   <div class="mobile-footer__top">
   <div class="mobile-footer__section">
@@ -468,18 +468,18 @@ document.querySelector(".close-btn").addEventListener("click", function() {
     </ul>
   </div>
 </div>
-<div class="desktop-footer__bottom">
-  <div class="mobile-footer__company-info">
-    더에이아이랩 ㈜, 대표: 최영준<br>
-    사업자등록번호: 439-87-00757<br>
-    통신판매신고번호: 제 2020-서울강남-02380<br>
-    주소: 서울특별시 강남구 선릉로 108길 9 5층<br>
-    © The AI Lab. All rights reserved.
+    <div class="desktop-footer__bottom">
+      <div class="mobile-footer__company-info">
+        더에이아이랩 ㈜, 대표: 최영준<br>
+        사업자등록번호: 439-87-00757<br>
+        통신판매신고번호: 제 2020-서울강남-02380<br>
+        주소: 서울특별시 강남구 선릉로 108길 9 5층<br>
+        © The AI Lab. All rights reserved.
+      </div>
   </div>
 </div>
 </footer>
-
-    </div>
+</div>
 
 
 <script src="/aionbook_theme/js/jquery.bpopup.mib.js"></script>
