Improved section_04 pricetable margin items

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -354,8 +354,8 @@ document.addEventListener('DOMContentLoaded', function() {
             <div class="table_column header">
               <div class="cell">기간</div>
               <div class="cell">인원</div>
-              <div class="cell">금액<span>(VAT 별도)</span></div>
-              <div class="cell">과목<span>(lesson)</span></div>
+              <div class="cell cell03">금액<span>(VAT 별도)</span></div>
+              <div class="cell cell04">과목<span>(lesson)</span></div>
             </div>
             <div class="table_column">
               <div class="cell">방학기</div>
