Improved section_05 inquiry inner margin

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -415,7 +415,9 @@ document.addEventListener('DOMContentLoaded', function() {
           </div>
         </div>
         <div class="inquiry__input_lg">
-          <label for="inquiry-content">문의 내용</label>
+          <label for="inquiry-content">
+            <div class="inquiry__content text">문의 내용</div>
+          </label>
           <textarea id="inquiry_content" name="inquiry_content"></textarea>
         </div>
         <input type="submit" value="문의하기" class="inquiry__btn" />
