Add banner vector image

--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -132,6 +132,10 @@
             <img class="bookimg" src="../aionbook_theme/images/home/onbookbn.png" alt="온북AI 이미지">
             <img class="bookbgimg" src="../aionbook_theme/images/home/onbookbnbg.png" alt="온북AI 배경 이미지">
           </div>
+          <div class="vector-wrapper">
+            <img class="vector01" src="../aionbook_theme/images/home/vector01.png" alt="Vector01">
+            <img class="vector02" src="../aionbook_theme/images/home/vector02.png" alt="Vector02">
+          </div>
         </div>
       </section>
 <!-- AI 온북 플랫폼의 특징 (ver. Card) -->
@@ -426,7 +430,82 @@ document.addEventListener('DOMContentLoaded', function() {
   </div>
 </section>
 </div>
-
+<!--  카드 섹션 -->
+<section class="course-grid">
+  <h3 class="course-grid__title">
+    AI 데이터 분석 심화 예정
+  </h3>
+  <div class="course-grid__container">
+    <!-- card01 카드시작 -->
+    <div class="card">
+      <div class="card-content">
+        <div class="card-image">
+          <img src="../aionbook_theme/images/home/card01.png" alt="THE! 인공지능"/>
+        </div>
+        <h2>1. THE! 인공지능</h2>
+        <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
+        <a href="class.html" class="button">코스시작</a>
+      </div>
+    </div>
+          <div class="card">
+              <div class="card-content">
+                  <div class="card-image">
+                  <img src="../aionbook_theme/images/home/card02.png"/></div>
+                  <h2>2. 인공지능을 위한 파이썬</h2>
+                  <p>인공지능을 위한 파이썬 기초 학습</p>
+                  <a href="https://school.coding-x.com/course/2" class="button">코스시작</a>
+              </div>
+          </div>
+          <div class="card">
+              <div class="card-content">
+                  <div class="card-image">
+                  <img src="../aionbook_theme/images/home/card03.png"/>
+                  </div>
+                  <h2>3. 데이터 분석 입문</h2>
+                  <p>인공지능의 원료는 데이터!</p>
+                  <a href="https://school.coding-x.com/course/3" class="button">코스시작</a>
+              </div>
+          </div>
+    </div>
+  </section>
+  <!--  카드 섹션 -->
+<section class="course-grid">
+  <h3 class="course-grid__title">
+    생성형 AI 입문 예정
+  </h3>
+  <div class="course-grid__container">
+    <!-- card01 카드시작 -->
+    <div class="card">
+      <div class="card-content">
+        <div class="card-image">
+          <img src="../aionbook_theme/images/home/card01.png" alt="THE! 인공지능"/>
+        </div>
+        <h2>1. THE! 인공지능</h2>
+        <p>인공지능을 처음 시작하는 분들을 위한 코스</p>
+        <a href="class.html" class="button">코스시작</a>
+      </div>
+    </div>
+          <div class="card">
+              <div class="card-content">
+                  <div class="card-image">
+                  <img src="../aionbook_theme/images/home/card02.png"/></div>
+                  <h2>2. 인공지능을 위한 파이썬</h2>
+                  <p>인공지능을 위한 파이썬 기초 학습</p>
+                  <a href="https://school.coding-x.com/course/2" class="button">코스시작</a>
+              </div>
+          </div>
+          <div class="card">
+              <div class="card-content">
+                  <div class="card-image">
+                  <img src="../aionbook_theme/images/home/card03.png"/>
+                  </div>
+                  <h2>3. 데이터 분석 입문</h2>
+                  <p>인공지능의 원료는 데이터!</p>
+                  <a href="https://school.coding-x.com/course/3" class="button">코스시작</a>
+              </div>
+          </div>
+    </div>
+  </section>
 <!-- Desktop Footer -->
 <div>
 <footer class="desktop-footer">
