fix space-evenly  main inner

--- a/aionbook/b_index.html
+++ b/aionbook/b_index.html
@@ -65,7 +65,7 @@
         <div class="mobile-header__top">
           <button class="gnb-btn">
             <div class="hidden">
-              메뉴버튼
+              햄버거
             </div>
           </button>
           <a href="/" class="mobile-header__logo">
