--- a/aionbook/index.html
+++ b/aionbook/index.html
@@ -343,7 +343,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <h4 class="schoolgroup_title">AI 온북 그룹들</h4>
           <div class="row-container">
           </div>
-          <!-- <div class="schoolgroup_list">
+          <!-- 기존 온북 그룹들--> <!--<div class="schoolgroup_list">
             <div claa="schoolgroup_item">
               <img src="../aionbook_theme/images/home/Schoolgroup01.png"/>
               <img src="../aionbook_theme/images/home/Schoolgroup02.png"/>
