--- a/aionbook/class.html
+++ b/aionbook/class.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css">
+    <!-- <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/common.css"> -->
     <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/components.css">
     <link rel="stylesheet" href="https://onbook.codingx.ai/assets/aionbook_theme/css/pages.css">
 
@@ -23,19 +23,101 @@
                 <div class="wing-title-bold">데이터분석 Basic</div>
                 <div class="wing-title-text">0/115 레슨</div>
             </div>
-            <img src="../aionbook_theme/images/class/btn_close.png" alt="접기버튼" onclick="toggleWing()">
+            <img src="../aionbook_theme/images/class/btn_close.png" alt="날개접기버튼" onclick="toggleWing()">
         </div>
         <div class="wing-list">
             <div class="wing-list-class">
-                The! 인공지능
-                <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼">
-            </div>
-            <div class="wing-list-class">
-                The! 인공지능
-                <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼">
-            </div>
-        </div>
-        <div class="wing-home">홈으로</div>
+
+<!-- lesson01 -->
+<div class="wing-list-class-title" onclick="toggleMenu(this)">
+
+    <div>
+        <img src="../aionbook_theme/images/class/lesson01.png" alt="lesson01">
+        <span>THE! 인공지능</span>
+        <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼" class="listbtn_close">
+        <img src="../aionbook_theme/images/class/listbtn_open.png" alt="열기버튼" class="listbtn_open">
+    </div>
+    <div class="wing-list-class-menu">
+        <div>인공지능 알아보기</div>
+        <div>인공지능 학습 시작하기</div>
+    </div>
+</div>
+
+<!-- lesson02 파이썬 -->
+<div class="wing-list-class-title" onclick="toggleMenu(this)">
+
+    <div>
+        <img src="../aionbook_theme/images/class/lesson02.png" alt="lesson02">
+        <span>파이썬</span>
+        <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼" class="listbtn_close">
+        <img src="../aionbook_theme/images/class/listbtn_open.png" alt="열기버튼" class="listbtn_open">
+    </div>
+    <div class="wing-list-class-menu">
+        <div>파이썬의 시작</div>
+        <div>파이썬 실습환경</div>
+        <div>파이썬의 기초</div>
+    </div>
+</div>
+
+<!-- lesson03 데이터 분석 입문 -->
+<div class="wing-list-class-title" onclick="toggleMenu(this)">
+
+    <div>
+        <img src="../aionbook_theme/images/class/lesson03.png" alt="lesson03">
+        <span>데이터 분석 입문</span>
+        <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼" class="listbtn_close">
+        <img src="../aionbook_theme/images/class/listbtn_open.png" alt="열기버튼" class="listbtn_open">
+    </div>
+    <div class="wing-list-class-menu">
+        <div>인공지능 알아보기</div>
+        <div>인공지능 학습 시작하기</div>
+    </div>
+</div>
+
+<!-- lesson04 데이터 분석 활용 -->
+<div class="wing-list-class-title" onclick="toggleMenu(this)">
+
+    <div>
+        <img src="../aionbook_theme/images/class/lesson04.png" alt="lesson04">
+        <span>데이터 분석 활용</span>
+        <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼" class="listbtn_close">
+        <img src="../aionbook_theme/images/class/listbtn_open.png" alt="열기버튼" class="listbtn_open">
+    </div>
+    <div class="wing-list-class-menu">
+        <div>편리한 작업 환경</div>
+        <div>탐색적 데이터 분석1</div>
+        <div>탐색적 데이터 분석2</div>
+        <div>그룹별 연산 적용</div>
+        <div>데이터 변환</div>
+        <div>데이터 시각화1</div>
+        <div>데이터 시각화2</div>
+        <div>분석 과정 리뷰</div>
+    </div>
+</div>
+
+<!-- lesson05 데이터분석 활용 -->
+<div class="wing-list-class-title" onclick="toggleMenu(this)">
+
+    <div>
+        <img src="../aionbook_theme/images/class/lesson05.png" alt="lesson05">
+        <span>머신러닝 알고리즘</span>
+        <img src="../aionbook_theme/images/class/listbtn_close.png" alt="접기버튼" class="listbtn_close">
+        <img src="../aionbook_theme/images/class/listbtn_open.png" alt="열기버튼" class="listbtn_open">
+    </div>
+    <div class="wing-list-class-menu">
+        <div>머신러닝 개요</div>
+        <div>K-NN(최근접 이웃법)</div>
+        <div>의사결정나무</div>
+        <div>앙상블과 랜덤포레스트</div>
+        <div>K-means 군집분석</div>
+    </div>
+</div>
+
+<!-- Home 버튼 -->
+<div class="wing-home">
+    <img src="../aionbook_theme/images/class/homebtn.png" alt="홈으로">홈으로
+</div>
+
     </section>
     
     <script>
@@ -43,6 +125,11 @@
         const wingBar = document.getElementById('wingBar');
         wingBar.classList.toggle('collapsed');
     }
+    function toggleMenu(element) {
+    element.classList.toggle('collapsed');
+    const menu = element.querySelector('.wing-list-class-menu');
+    menu.classList.toggle('active');
+}
     </script>
     <section class="basic-class">
         <h1>THE! 인공지능</h1>
